<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="app_name">Financial Products</string>
    <string name="action_settings">Settings</string>
    <string name="consumer_loans">Потребителски кредити</string>
    <string name="mortgage_loans">Ипотечни кредити</string>
    <string name="credit_cards">Кредитни карти</string>
    <string name="deposits">Deposit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="empty_fields">All fields are required</string>
    <string name="no_internet">There was a problem while creating a connection to the remote service</string>
    <string name="product">Product</string>
    <string name="no_result">No results</string>
    <string name="no_url_or_username">Setting up your url and username</string>
    <string name="back">Back</string>

    &lt;!&ndash;Labels&ndash;&gt;
    <string name="car_type">Car type</string>
    <string name="loan_or_a_leasing">Loan or a leasing</string>
    <string name="car_age">Age of cars</string>
    <string name="residual_value">Residual value</string>
    <string name="currency">Currency</string>
    <string name="loan_term">Loan Term</string>
    <string name="loan_amount">Loan amount</string>
    <string name="car_price">Car price</string>
    <string name="loan_type">Loan type</string>
    <string name="card_providers">Card providers</string>
    <string name="card_type">Card type</string>
    <string name="deposit_term_month">Deposit term in months</string>
    <string name="interest_capitalization">With or without interest capitalization</string>
    <string name="loan_purpose">Loan purpose</string>
    <string name="property_value">Property value</string>
    <string name="title_activity_settings">Settings</string>
    <string name="auto">AutoLoan</string>
    <string name="consumer">ConsumerLoan</string>
    <string name="mortgage">MortgageLoan</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">Size must be between</string>

    <string name="apr">APR</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="total_payed">Total paid</string>
    <string name="min_self_participation">Min self participation</string>
    <string name="interest_rate_type">Interest rate type</string>
    <string name="cash_rate">Cash rate</string>
    <string name="purchase_rate">Purchase rate</string>
    <string name="cash_apr">Cash APR</string>
    <string name="credit_card_limit">Credit card limit</string>
    <string name="annual_fee_main">Annual fee main</string>
    <string name="aer">AER</string>
    <string name="after_revenue_tax_amount">After revenue tax amount</string>
    <string name="down_payment">Down payment</string>
    <string name="no_image">No image</string>
    <string name="numbers_only">Numbers only</string>

    <string name="title_activity_auto_info">Auto info</string>
    <string name="title_activity_consumer_info">Consumer info</string>
    <string name="title_activity_credit_card">Credit card info</string>
    <string name="title_activity_deposits_info">Deposits info</string>
    <string name="title_activity_mortgage_info">Mortgage info</string>-->

    <!--Header-->
    <string name="app_name">Моите пари</string>

    <!--Labels-->
    <string name="consumer_loans">Потребителски кредит</string>
    <string name="credit_cards">Кредитни карти</string>
    <string name="mortgage_loans">Ипотечни кредити</string>
    <string name="deposit">Депозити</string>
    <string name="savings_accounts">Спестовни сметки</string>
    <string name="financial_news">Финансови новини</string>
    <string name="current_tips">Актуални съвети</string>

    <string name="settings_id">cl-sr-xml</string>
    <string name="settings_username">demo</string>
    <string name="settings_url">http://affiliate.finzoom.ro/default.aspx</string>

    <string-array name="loans">
        <item>Авто</item>
        <item>Кредитни карти</item>
        <item>Потребителски</item>
        <item>Ипотечни</item>
        <item>Бизнес</item>
        <item>Депозити</item>
        <item>Търсене</item>
        <item>Начало</item>
    </string-array>
</resources>